--- a/Front-end/readme.me
+++ b/Front-end/readme.me
@@ -1,4 +1,4 @@
-Pronnector Fron-end
+Pronnector Front-end
 =====
 
 Here you will find the different pages of the pronnector front-end. This layer uses HTML5, CSS (Twitter Bootstrap) + Javascript.
